--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <title>Barbershop</title>
 </head>
 <body>
+    <!--Шапка і навігація-->
     <header>
         <nav>
-            <a href="/images/Logo.svg">
-            <img src="/images/Logo.svg" alt="Логотип компанії" srcset=""></a>
+            <a href="index.html"> 
+                <img src="./images/Logo.svg" alt="Логотип компании">
+            </a>
             <ul>
                 <li>
                     <a href="О нас">О нас</a>
@@ -39,12 +41,14 @@
         </nav>
     </header>
     <main>
+        <!--Секція Герой-->
         <section>
             <p> A hair salon for men in Kyiv</p>
             <h1>BarberShop</h1>
             <p> Мы эксперты в модных мужских стрижках. <br>
                 Работаем быстро, осторожно и со вкусом.</p>
         </section>
+        <!-- Секція Про Нас -->
         <section>
             <div>
                 <ul>
@@ -63,6 +67,7 @@
             </p>
             <a href="#">онлайн-запись</a>
         </section>
+        <!-- Послуги та ціни -->
         <section>
             <p> Проведи время в компании лучших мастеров</p>
             <h2> Услуги и цены</h2>
@@ -103,6 +108,7 @@
                 </tr>  
             </table>
         </section>
+        <!-- Чому обирають нас -->
         <section>
             <div>
                 <ul>
@@ -129,6 +135,7 @@
             <p>О нас говорят только хорошее. Но лучше 1 раз увидеть и прочувствовать, чем 10 раз прочитать.</p>
             </div>
         </section>
+        <!-- Наша команда -->
         <section>
             <p>для настоящих ценителей атмосферы</p>
             <h2>Наши мастера</h2>
@@ -192,6 +199,10 @@
                     </li>          
                     
             </ul>
+        </section>
+        <!-- Роботи -->
+        <section>
+
         </section>
     </main>
     
