--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             </a>
             <ul>
                 <li>
-                    <a href="О нас">О нас</a>
+                    <a href="#Онас">О нас</a>
                 </li>
                 <li>
-                    <a href="Услуги и цены">Услуги и цены</a>
+                    <a href="Услугиицены">Услуги и цены</a>
                 </li>
                 <li>
                     <a href="Мастера">Мастера</a>
@@ -27,6 +27,7 @@
                 </li>
                 <li>
                     <a href="tel:+380441111111">+38 044 111 11 11</a>
+                </li>
                     <li>
                         <a href="онлайн-запись">онлайн-запись</a>
                     </li>
@@ -36,7 +37,6 @@
                     <li>
                         <a href="Youtube">Youtube</a>
                     </li>
-                </li>
             </ul>
         </nav>
     </header>
@@ -201,9 +201,7 @@
             </ul>
         </section>
         <!-- Роботи -->
-        <section>
-
-        </section>
+        
     </main>
     
 </body>
