--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
           </li>
         </ul>
       </section>
-      <!-- Роботи -->
+      <!-- Портфоліо -->
       <section class="portpholio">
         <h2 class="portpholio-title">Portpholio</h2>
         <p class="portpholio-text">
@@ -247,6 +247,33 @@
             <img src="./images/portpholio3.jpg" alt="portpholio" />
           </li>
         </ul>
+      </section>
+      <!-- Контакти -->
+      <section>
+        <div>
+          <h3>Онлайн-запись</h3>
+          <input type="text" name=" Имя*" />Имя*"
+          <input type="text" name="Телефон*" />Телефон*
+          <textarea name="message" cols="30" rows="10">Сообщение</textarea>
+          <button>отправить</button>
+        </div>
+        <div>
+          <address>
+            <ul>
+              <li>
+                <a href="#">ул. Васильковая, 7А Киев, 08132</a>
+              </li>
+              <li>
+                <a href="tel:+380441111111">+38 044 111 11 11</a>
+              </li>
+              <li>
+                <a href="mailto:barbershop@email.com">barbershop@email.com</a>
+              </li>
+            </ul>
+          </address>
+          <p>время работы</p>
+          <p>Ежедневно с 9:00 до 22:00</p>
+        </div>
       </section>
     </main>
   </body>
