--- a/index.html
+++ b/index.html
@@ -276,5 +276,17 @@
         </div>
       </section>
     </main>
+    <!-- Підвал -->
+    <footer>
+      <p>&#169; Copyright 2020</p>
+      <ul>
+        <li>
+          <a href="Instagram">Instagram</a>
+        </li>
+        <li>
+          <a href="Youtube">Youtube</a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
